@@ -1,3 +1,11 @@
+2020-07-10         Arnold D. Robbins     <arnold@skeeve.com>
+	
+	Fix printf issues. Thanks to Michal Jaegermann for the report.
+
+	* cint_array.c (cint_dump): Fix printf formats.
+	* debug.c (print_symbol): Ditto.
+	* mpfr.c (mpg_interpret): Ditto.
+
 2020-07-09         Arnold D. Robbins     <arnold@skeeve.com>
 
 	Fix dbugeval2 test for MPFR.
